<resources>
    <string name="app_name">CS3270 Midterm - Bahl</string>
    <string name="weight_in_pounds">Weight in Pounds</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height_in_inches">Height in Inches</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
</resources>